<?xml version="1.0"?>
<package format="2">
  <name>amrl_launch</name>
  <version>0.0.1</version>
  <description>The amrl_launch package</description>
  <maintainer email="zibaeiahmadreza@gmail.com">Ahmadreza Zibaei</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
